--- a/csharp/.vscode/launch.json
+++ b/csharp/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/hamming/bin/Debug/netcoreapp2.1/Hamming.dll",
+            "program": "${workspaceFolder}/acronym/bin/Debug/netcoreapp2.1/Acronym.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/hamming",
+            "cwd": "${workspaceFolder}/acronym",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "internalConsole",
             "stopAtEntry": false,
