--- a/csharp/.vscode/tasks.json
+++ b/csharp/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/hamming/Hamming.csproj"
+                "${workspaceFolder}/acronym/Acronym.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
